# test_python_rust_interop

./: Cargo.toml  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
po/: POTFILES  meson.build
python/: test.py
src/: application.rs  config.rs  main.rs  meson.build  window.rs  window.ui
